--- a/store_management_system/user_accounts_management/deployment.yaml
+++ b/store_management_system/user_accounts_management/deployment.yaml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   authenticationDatabase:
     image: mysql
+    ports:
+      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
     healthcheck:
@@ -16,17 +18,21 @@ services:
   authenticationDatabaseMigration:
     image: authenticationdatabasemigration
     environment:
-      - DATABASE_URL=authenticationDatabase
       - PRODUCTION=True
+      - DATABASE_URL=authenticationDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
     depends_on:
       authenticationDatabase:
         condition: service_healthy
   authentication:
     image: authentication
-    environment:
-      - DATABASE_URL=authenticationDatabase
-      - PRODUCTION=True
-    depends_on:
-      - authenticationDatabaseMigration
     ports:
       - "5001:5001"
+    environment:
+      - PRODUCTION=True
+      - DATABASE_URL=authenticationDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
+    depends_on:
+      - authenticationDatabaseMigration
