/search endpoint for customer container implemented for production environment. All level0 tests are now passing.

--- a/store_management_system_code/store_management/deployment.yaml
+++ b/store_management_system_code/store_management/deployment.yaml
@@ -36,3 +36,14 @@ services:
       - DATABASE_PASSWORD=root
     depends_on:
       - storeDatabaseMigration
+  customer:
+    image: customer
+    ports:
+      - "5002:5002"
+    environment:
+      - PRODUCTION=True
+      - DATABASE_URL=storeDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
+    depends_on:
+      - storeDatabaseMigration
