Level 2 tests are now passing.
/orders_to_deliver, /pick_up_order, /delivered endpoints implemented.

--- a/store_management_system_code/store_management/deployment.yaml
+++ b/store_management_system_code/store_management/deployment.yaml
@@ -10,7 +10,7 @@ services:
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       timeout: 10s
-      retries: 10
+      retries: 30
   adminer:
     image: adminer
     ports:
@@ -40,6 +40,17 @@ services:
     image: customer
     ports:
       - "5002:5002"
+    environment:
+      - PRODUCTION=True
+      - DATABASE_URL=storeDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
+    depends_on:
+      - storeDatabaseMigration
+  courier:
+    image: courier
+    ports:
+      - "5003:5003"
     environment:
       - PRODUCTION=True
       - DATABASE_URL=storeDatabase
