Level 3 tests are now passing.

--- a/store_management_system_code/store_management/deployment.yaml
+++ b/store_management_system_code/store_management/deployment.yaml
@@ -8,9 +8,10 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      test: [ "CMD-SHELL", "mysqladmin ping -h localhost -u root -proot" ]
       timeout: 10s
-      retries: 30
+      retries: 40
+      start_period: 25s
   adminer:
     image: adminer
     ports:
