--- a/store_management_system_code/deployment.yaml
+++ b/store_management_system_code/deployment.yaml
@@ -1,6 +1,17 @@
 version: "3.8"
 
 services:
+  authenticationDatabase:
+    image: mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+    healthcheck:
+      test: [ "CMD-SHELL", "mysqladmin ping -h localhost -u root -proot" ]
+      timeout: 10s
+      retries: 40
+      start_period: 25s
   storeDatabase:
     image: mysql
     ports:
@@ -12,10 +23,24 @@ services:
       timeout: 10s
       retries: 40
       start_period: 25s
-  adminer:
+  authenticationAdminer:
+    image: adminer
+    ports:
+      - "8080:8080"
+  storeAdminer:
     image: adminer
     ports:
       - "8081:8080"
+  authenticationDatabaseMigration:
+    image: authenticationdatabasemigration
+    environment:
+      - PRODUCTION=True
+      - DATABASE_URL=authenticationDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
+    depends_on:
+      authenticationDatabase:
+        condition: service_healthy
   storeDatabaseMigration:
     image: storedatabasemigration
     environment:
@@ -26,6 +51,17 @@ services:
     depends_on:
       storeDatabase:
         condition: service_healthy
+  authentication:
+    image: authentication
+    ports:
+      - "5000:5000"
+    environment:
+      - PRODUCTION=True
+      - DATABASE_URL=authenticationDatabase
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=root
+    depends_on:
+      - authenticationDatabaseMigration
   owner:
     image: owner
     ports:
