--- a/store_management_system_code/deployment.yaml
+++ b/store_management_system_code/deployment.yaml
@@ -23,14 +23,10 @@ services:
       timeout: 10s
       retries: 40
       start_period: 25s
-  authenticationAdminer:
+  adminer:
     image: adminer
     ports:
       - "8080:8080"
-  storeAdminer:
-    image: adminer
-    ports:
-      - "8081:8080"
   authenticationDatabaseMigration:
     image: authenticationdatabasemigration
     environment:
