--- a/store_management_system_code/deployment.yaml
+++ b/store_management_system_code/deployment.yaml
@@ -14,6 +14,8 @@ services:
       start_period: 25s
     networks:
       - authenticationNetwork
+    volumes:
+      - "authenticationDatabaseData:/var/lib/mysql"
   storeDatabase:
     image: mysql
     ports:
@@ -27,6 +29,8 @@ services:
       start_period: 25s
     networks:
       - storeNetwork
+    volumes:
+      - "storeDatabaseData:/var/lib/mysql"
   adminer:
     image: adminer
     ports:
@@ -114,3 +118,7 @@ services:
 networks:
   authenticationNetwork:
   storeNetwork:
+
+volumes:
+  authenticationDatabaseData:
+  storeDatabaseData:
