Minor change in deployment.yaml
Ensured that authentication, courier, customer and owner services start only if authenticationDatabaseMigration and storeDatabaseMigration services have successfully done the migrations.

--- a/store_management_system_code/deployment.yaml
+++ b/store_management_system_code/deployment.yaml
@@ -68,7 +68,8 @@ services:
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
     depends_on:
-      - authenticationDatabaseMigration
+      authenticationDatabaseMigration:
+        condition: service_completed_successfully
     networks:
       - authenticationNetwork
   owner:
@@ -81,7 +82,8 @@ services:
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
     depends_on:
-      - storeDatabaseMigration
+      storeDatabaseMigration:
+        condition: service_completed_successfully
     networks:
       - storeNetwork
   customer:
@@ -94,7 +96,8 @@ services:
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
     depends_on:
-      - storeDatabaseMigration
+      storeDatabaseMigration:
+        condition: service_completed_successfully
     networks:
       - storeNetwork
   courier:
@@ -107,7 +110,8 @@ services:
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
     depends_on:
-      - storeDatabaseMigration
+      storeDatabaseMigration:
+        condition: service_completed_successfully
     networks:
       - storeNetwork
 
