--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ store_management_system_code/user_accounts_management/__pycache__/
 store_management_system_code/store_management/__pycache__/
 store_management_system_tests/__pycache__/
 store_management_system_tests/temp.csv
+share/
