Level 1 tests with blockchain are now passing.

--- a/store_management_system_code/deployment.yaml
+++ b/store_management_system_code/deployment.yaml
@@ -169,6 +169,12 @@ services:
       - ENABLE_INIT_DAEMON=False
     networks:
       - storeNetwork
+  ganache:
+    image: trufflesuite/ganache-cli
+    ports:
+      - "8545:8545"
+    networks:
+      - storeNetwork
 
 networks:
   authenticationNetwork:
